# scoper

./: Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
examples/: simple_example.rs
results/: basic_test.json  custom_header_test.json  implicit_drop.json  macro_test.json  simple_example.json  threads_test.json
scoper-attr/: Cargo.toml
scoper-attr/src/: lib.rs
scoper-base/: Cargo.toml
scoper-base/src/: lib.rs
scoper-impl/: Cargo.toml
scoper-impl-attr/: Cargo.toml
scoper-impl-attr/src/: lib.rs
scoper-impl/src/: event_types.rs  global.rs  json.rs  lib.rs  macro_rules.rs  record_scope.rs  scopes.rs  types.rs
scoper-noop/: Cargo.toml
scoper-noop-attr/: Cargo.toml
scoper-noop-attr/src/: lib.rs
scoper-noop/src/: lib.rs
src/: eventtypes.rs  global.rs  json.rs  lib.rs  macro_rules.rs  record_scope.rs  recordscope.rs  scopes.rs  slots.rs  value.rs
src/types/: mod.rs  scopes.rs  value.rs
