[workspace]

members = ["scoper-attr",]

[package]
authors = ["Fabian Osyguß <fabian.osyguss@gmail.com>"]
edition = "2024"
name = "scoper"
version = "0.2.0"

[features]
impl = ["serde", "serde_json"]

[dependencies]
scoper-attr = {path = "scoper-attr"}
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.138", optional = true }
const_format = "0.2.34"