[workspace]
members = ["scoper-impl", "scoper-impl-attr", "scoper-noop", "scoper-noop-attr"]

[workspace.dependencies]
const_format = { version = "0.2.34" }

[package]
authors = ["Fabian Osyguß <fabian.osyguss@gmail.com>"]
edition = "2024"
name = "scoper"
version = "0.3.0"

[features]
impl = ["dep:scoper-impl"]

[dependencies]
scoper-impl = { path = "scoper-impl", optional = true }
scoper-noop = { path = "scoper-noop" }
