[workspace]
members = ["scoper-base", "scoper-impl", "scoper-impl-attr", "scoper-noop", "scoper-noop-attr"]

[workspace.dependencies]
const_format = { version = "0.2.34" }
scoper-base ={ path = "scoper-base"}

[package]
authors = ["Fabian Osyguß <fabian.osyguss@gmail.com>"]
edition = "2024"
name = "scoper"
version = "0.3.0"

[features]
impl = ["dep:scoper-impl"]

[dependencies]
scoper-base ={ workspace = true}
scoper-impl = { path = "scoper-impl", optional = true }
scoper-noop = { path = "scoper-noop" }

[dev-dependencies]
scoper = {path = ".", features = ["impl"]}